# that-gpt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SHA256.txt  codemagic.yaml  package-lock.json  package.json
.github/workflows/: ci.yml  mobile-ci.yml  mobile-release.yml  release.yml
assets/screenshots/: README.md
client/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/shell/: DesktopShell.tsx  HeaderMenu.tsx  MobileHomeNav.tsx  MobileShell.tsx  (+4 more)
docs/: FORK_BUILDS.md  MOBILE_BUILD.md  RELEASE_v2.0.0.md  RELEASE_v2.5.0.md  RELEASE_v2.6.2.md  TRUST.md  index.html  master_plan.md  repository-intelligence.md  stages.md
docs/assets/: landing.css
docs/screenshots/: README.md
docs/temp/: ACTION_PLAN.md  TODO.md
scripts/: clean-project.ps1  collect-mobile-artifacts.mjs  generate-brand-assets.mjs  generate-sha256.ps1  mobile-android-init.mjs  package-release.ps1  patch-android-gradle.mjs  patch-android-manifest.mjs  stage-portable.mjs  sync-android-icons.mjs
server/: .env.example  package-lock.json  package.json
server/src/: app.ts
src-tauri/: .env.example  Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  folder.rs  health.rs  library.rs  mod.rs  pricing.rs  prompt.rs  provider.rs  settings.rs  template.rs  voice.rs
src-tauri/src/config/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/models/: ai.rs  api.rs  chat.rs  folder.rs  knowledge.rs  library.rs  mod.rs  prompt.rs  provider.rs  settings.rs
src-tauri/src/repository/: chat_repository.rs  folder_repository.rs  mod.rs  prompt_repository.rs  provider_repository.rs
src-tauri/src/services/: ai.rs  attachment_validation.rs  chat.rs  docx_text.rs  embeddings.rs  export.rs  folder.rs  image_gen.rs  image_validation.rs  knowledge.rs  library.rs  mod.rs  model_catalog.rs  model_prices.rs  pdf_text.rs  prompt.rs  provider.rs  secrets.rs  templates.rs  tools.rs  update_check.rs  usage_log.rs  version_compare.rs  web_search.rs
(+99 files in other folders)
