[package]
name = "chat-nest"
version = "1.1.0"
description = "ChatNest desktop chat application"
authors = ["ChatNest"]
edition = "2021"
homepage = "https://github.com/chatnest/chat-nest"
license = "MIT"

[lib]
name = "chat_nest_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "time", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dotenvy = "0.15"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
