[package]
name = "that-gpt"
version = "2.5.0"
description = "ThatGPT desktop chat application"
authors = ["ThatGPT"]
edition = "2021"
homepage = "https://github.com/Satan2049/that-gpt"
license = "MIT"

[lib]
name = "that_gpt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "time", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dotenvy = "0.15"
base64 = "0.22"
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
